--- a/book.toml
+++ b/book.toml
@@ -5,5 +5,8 @@ multilingual = false
 src = "src"
 title = "Rat"
 
+[output.html]
+default-theme = "navy"
+
 [output.html.playground]
 runnable = false
